--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,25 +34,24 @@
         android:layout_height="52dp"
         android:layout_marginTop="130dp"
         android:fontFamily="@font/montserrat"
-        android:text="TextView"
+        android:text="GO ALL IN"
         android:textColor="@color/colorAccent"
         android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:text="GO ALL IN" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="27dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="TextView"
+        android:text="ON GOING ALL OUT"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="107dp"
-        tools:text="ON GOING ALL OUT" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
