--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/desiredleaguebg" />
+        app:srcCompat="@drawable/desiredleaguebg"
+        android:contentDescription="@string/background_image" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -25,7 +26,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/swooshlogo" />
+        app:srcCompat="@drawable/swooshlogo"
+        android:contentDescription="@string/app_logo" />
 
     <TextView
         android:id="@+id/textView4"
@@ -33,7 +35,7 @@
         android:layout_height="42dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/montserrat"
-        android:text="Desired League:"
+        android:text="@string/desired_league"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
@@ -50,7 +52,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/swooch_toggle"
         android:fontFamily="@font/montserrat"
-        android:text="NEXT"
+        android:text="@string/next"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,10 +75,10 @@
             android:layout_height="wrap_content"
             android:background="@drawable/swooch_toggle"
             android:fontFamily="@font/montserrat"
-            android:text="Mens"
+            android:text="@string/mens"
             android:textColor="@color/colorAccent"
-            android:textOff="Mens"
-            android:textOn="Mens" />
+            android:textOff="@string/mens"
+            android:textOn="@string/mens" />
 
         <ToggleButton
             android:id="@+id/toggleButton2"
@@ -86,10 +88,10 @@
             android:layout_marginBottom="16dp"
             android:background="@drawable/swooch_toggle"
             android:fontFamily="@font/montserrat"
-            android:text="Womens"
+            android:text="@string/womens"
             android:textColor="@color/colorAccent"
-            android:textOff="Womens"
-            android:textOn="Womens" />
+            android:textOff="@string/womens"
+            android:textOn="@string/womens" />
 
         <ToggleButton
             android:id="@+id/toggleButton"
@@ -97,10 +99,10 @@
             android:layout_height="wrap_content"
             android:background="@drawable/swooch_toggle"
             android:fontFamily="@font/montserrat"
-            android:text="Co-Ed"
+            android:text="@string/co_ed"
             android:textColor="@color/colorAccent"
-            android:textOff="Co-Ed"
-            android:textOn="Co-Ed" />
+            android:textOff="@string/co_ed"
+            android:textOn="@string/co_ed" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
