--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/leagueNext"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_marginStart="15dp"
@@ -52,6 +52,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/swooch_toggle"
         android:fontFamily="@font/montserrat"
+        android:onClick="clickedNext"
         android:text="@string/next"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
